More timer changes. Also fixed wrapping issue with board

--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -30,3 +30,11 @@ body {
 .board {
     margin-left: 32%
 }
+
+.row{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: nowrap;
+  }
